[project]
name = "langgraph-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langgraph>=1.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]
